--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon image_upload_server.js"
+    "server": "nodemon image_upload_server.js",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
+    "cypress": "^4.4.1",
     "nodemon": "^2.0.3"
   }
 }
