--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-donut-chart": "^1.1.8",
+    "react-input-autosize": "^2.2.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
