--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-alert": "^7.0.0",
     "react-alert-template-basic": "^1.0.0",
+    "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-donut-chart": "^1.1.8",
     "react-input-autosize": "^2.2.2",
