--- a/package.json
+++ b/package.json
@@ -3,27 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.10",
-    "@material-ui/lab": "^4.0.0-alpha.49",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "firebase": "^7.14.1",
+    "easyalert": "^2.0.0",
+    "firebase": "^7.14.2",
     "react": "^16.13.1",
-    "react-alert": "^7.0.0",
-    "react-alert-template-basic": "^1.0.0",
     "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-donut-chart": "^1.1.8",
-    "react-input-autosize": "^2.2.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-typed": "^1.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
@@ -51,8 +43,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "cypress": "^4.4.1",
+    "concurrently": "^5.2.0",
+    "cypress": "^4.5.0",
     "nodemon": "^2.0.3"
   }
 }
