Exported the book display component to its own file from form, Redesigned the image display technique to be fetched from the database via url, rather than sending a request to firebase every time, it loads much faster now Refactored Form.js Massive changes to Book.js Refactored sort_into_conditions and renamed it order_books_by_condition

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "blueimp-load-image": "^5.10.0",
     "easyalert": "^2.1.0",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-exif-orientation-img": "^0.1.5",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
